Weather toggle - WIP

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@
 }
 
 #resultDisplay{
-    max-height: 300px;
+    max-height: 200px;
     overflow-y:scroll;
+}
+
+#toggleDisplay{
+    display: block;
 }
