--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,103 @@
     position: relative;
 }
 
-#searchInput{
+#searchInput {
     position: absolute;
     left: 50px;
     top: 10px;
-    z-index: 300000;
+    z-index: 299999;
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-#resultDisplay{
-    max-height: 200px;
-    overflow-y:scroll;
+#offcanvasTop {
+    position: absolute;
+    background-image: linear-gradient(135deg, rgb(15, 15, 15), rgb(62, 62, 62));
+    height: 100vh;
+    width: 100vw;
+    z-index: 300000;
 }
 
-#toggleDisplay{
+.center {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wave {
+    width: 5px;
+    height: 100px;
+    background: linear-gradient(45deg, rgb(255, 146, 29), rgb(255, 248, 106));
+    margin: 10px;
+    animation: wave 1s linear infinite;
+    border-radius: 20px;
+}
+
+.wave:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+.wave:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+.wave:nth-child(4) {
+    animation-delay: 0.3s;
+}
+
+.wave:nth-child(5) {
+    animation-delay: 0.4s;
+}
+
+.wave:nth-child(6) {
+    animation-delay: 0.5s;
+}
+
+.wave:nth-child(7) {
+    animation-delay: 0.6s;
+}
+
+.wave:nth-child(8) {
+    animation-delay: 0.7s;
+}
+
+.wave:nth-child(9) {
+    animation-delay: 0.8s;
+}
+
+.wave:nth-child(10) {
+    animation-delay: 0.9s;
+}
+
+@keyframes wave {
+    0% {
+        transform: scale(0);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+#slogan {
+    color: rgb(209, 209, 209);
+    z-index: 300001;
+}
+
+#sloganBy {
+    color: rgb(120, 120, 120);
+    z-index: 300001;
+}
+
+#resultDisplay {
+    max-height: 200px;
+    overflow-y: scroll;
+}
+
+#toggleDisplay {
     display: block;
 }
