--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,47 @@
 #toggleDisplay {
     display: block;
 }
+
+#loginBtn{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    z-index: 299999;
+}
+
+#loggedinBtn{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    z-index: 299999;
+    display: none;
+}
+
+@media only screen and (max-width: 450px) {
+    #loginBtn{
+        position: absolute;
+        left: 10px;
+        bottom: 40px;
+        z-index: 299999;
+    }
+
+    #loggedinBtn{
+        position: absolute;
+        left: 10px;
+        bottom: 40px;
+        z-index: 299999;
+        display: none;
+    }
+}
+
+#exampleModal{
+    z-index: 300001;
+}
+
+#loginBody{
+    display: none;
+}
+
+#createBody{
+    display: none;
+}
