Login/Create/Logout/AccountDetails - DONEgit add .!

--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,13 @@
 #createBody{
     display: none;
 }
+
+#logoutAccountBtn{
+    display: none;
+}
+#newAccountBtn{
+    display: none;
+}
+#chartDiv{
+    display: none;
+}
