--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,14 @@
 
 #searchInput {
     position: absolute;
+    width:40vw;
+    min-width:18rem;
     left: 50px;
     top: 10px;
     z-index: 299999;
-    background-color: rgba(255, 255, 255, 0.75);
+    border: 1px;
+    border-color: linear-gradient(45deg, rgb(255, 146, 29), rgb(255, 248, 106));
+    background-image: linear-gradient(135deg, rgb(40, 40, 40, 0.75), rgba(100, 100, 100, 0.75));
 }
 
 #offcanvasTop {
@@ -17,6 +21,19 @@
     height: 100vh;
     width: 100vw;
     z-index: 300000;
+}
+
+#logo{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 2vw;
+    top: 20px;
+    z-index: 299999;
+}
+#imgLogo{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .center {
@@ -104,14 +121,18 @@
     display: block;
 }
 
-#loginBtn{
+#toggleDisplayBtn {
+    color:rgb(255, 196, 0);
+}
+
+#loginBtn {
     position: absolute;
     left: 10px;
     bottom: 10px;
     z-index: 299999;
 }
 
-#loggedinBtn{
+#loggedinBtn {
     position: absolute;
     left: 10px;
     bottom: 10px;
@@ -120,40 +141,83 @@
 }
 
 @media only screen and (max-width: 450px) {
-    #loginBtn{
+    #loginBtn {
         position: absolute;
         left: 10px;
         bottom: 40px;
         z-index: 299999;
     }
 
-    #loggedinBtn{
+    #loggedinBtn {
         position: absolute;
         left: 10px;
         bottom: 40px;
         z-index: 299999;
         display: none;
     }
+    #logo{
+        display:none;
+    }
 }
 
-#exampleModal{
+#exampleModal {
     z-index: 300001;
 }
 
-#loginBody{
+#loginBody {
     display: none;
 }
 
-#createBody{
+#createBody {
     display: none;
 }
 
-#logoutAccountBtn{
+#logoutAccountBtn {
     display: none;
 }
-#newAccountBtn{
+
+#newAccountBtn {
     display: none;
 }
-#chartDiv{
+
+#chartDiv {
     display: none;
 }
+
+.btn-primary {
+    background-color: rgb(227, 159, 33);
+}
+
+.btn-primary:hover {
+    background-color: rgb(179, 121, 13);
+}
+
+.btn-primary:active {
+    background-color: rgb(179, 121, 13);
+}
+
+.btn-primary:visited {
+    background-color: rgb(179, 121, 13);
+}
+
+.btn-outline-info {
+    color: black;
+    border-color: black;
+}
+
+.btn-outline-info:hover {
+    background-color: rgb(227, 159, 33);
+}
+
+.btn-outline-info:active {
+    background-color: rgb(227, 159, 33);
+}
+
+.btn-outline-info:visited {
+    background-color: rgb(227, 159, 33);
+}
+
+.leaflet-control-layers{
+    background-image: linear-gradient(45deg, rgb(255, 146, 29), rgb(255, 248, 106));
+}
+
